fixing project images width on mobile

--- a/src/components/ProjectComponent/index.css
+++ b/src/components/ProjectComponent/index.css
@@ -104,7 +104,6 @@
     .project-image{
         width: 95%;
         height: auto;
-        margin-left: -10px;
     }
     .project-description{
         width: 100%;
